k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workbridge-frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: workbridge-frontend
  template:
    metadata:
      labels:
        app: workbridge-frontend
    spec:
      containers:
      - name: frontend
        image: shai3600/workbridge-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
