k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workbridge-backend-service
spec:
  selector:
    app: workbridge-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
