k8s/db-service-02.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: workbridge
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - name: pg
      port: 5432
      targetPort: 5432
