k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workbridge-frontend-service
spec:
  selector:
    app: workbridge-frontend
  # This makes the service accessible from outside the cluster
  type: NodePort
  ports:
    - protocol: TCP
      port: 80       # The port inside the cluster
      targetPort: 80 # The port on the pod
      # The static port to access from outside
      nodePort: 30007
  # type: LoadBalancer
  # ports:
  #   - protocol: TCP
  #     port: 80 # The port clients will connect to
  #     targetPort: 80 # The port the container is running on
